--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Confirmit Test App</title>
+    <title>Test App</title>
 </head>
 <body>
     <div id="app"></div>
